# android-hid-connect

./: .gitignore  ACCEPTANCE.md  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: dependabot.yml  release-please.yml
.github/workflows/: ci.yml
ai-device-kernel/: Cargo.toml
ai-device-kernel/src/: action.rs  capability.rs  ids.rs  lib.rs  memory.rs  memory_sqlite.rs  observation.rs  plan.rs  plan_executor.rs  predicate.rs  predicate_engine.rs  predicate_wait.rs  protocol.rs  state.rs  stream_engine.rs  ui_repr.rs
ai-device-kernel/tests/: agent_orchestrator.rs  protocol_tcp_round_trip.rs  runtime_smoke.rs
android-hid-agent/: Cargo.toml
android-hid-agent/src/: atomic.rs  errors.rs  geometry.rs  lib.rs  plan.rs  scenario.rs  selectors.rs  session.rs  stream.rs
android-hid-agent/src/backend/: daemon.rs  mod.rs  scrcpy.rs  unified.rs
android-hid-agent/src/verbs/: mod.rs
android-hid-cli/: Cargo.toml
android-hid-cli/src/: args.rs  main.rs
android-hid-daemon/: Cargo.toml
android-hid-daemon/src/: a11y.rs  am.rs  binder.rs  clipboard.rs  dumpsys.rs  files.rs  handlers.rs  input.rs  installer.rs  lib.rs  lifecycle.rs  location.rs  logcat.rs  main.rs  manifest.rs  notifications.rs  pm.rs  props.rs  providers.rs  screencap.rs  server.rs  settings.rs  shell.rs  state.rs  stream.rs  uiautomation.rs  waits.rs  wm.rs
android-hid-protocol/: Cargo.toml
android-hid-protocol/src/: error.rs  frame.rs  kvs.rs  lib.rs  verb.rs  version.rs
android-hid-py/: Cargo.toml  pyproject.toml
android-hid-py/src/: lib.rs
android-hid-py/src/android_hid/: __init__.py
benches/: uhid_throughput.rs
docs/: INDEX.md  agent-integration-recipe.md  agent-v2-design.md  ai-agent-integration.md  ai-device-kernel-v3-design.md  architecture.md  comparison-with-handsets.md  development.md  real_dev_tap_bench.py  roadmap-exceed-handsets.md  scrcpy-protocol-compatibility.md  wire-format.md
docs/adr/: 0001-llm-minimum-unit-is-intent.md  0003-planning-granularity-is-per-chunk.md  0004-error-contract-is-structured-atomicresult.md  0005-multi-app-orchestration-hybrid-app-switch.md
docs/baselines/: v3-acceptance-all-phases-2026-06-30.md  v3-phase1-acceptance-2026-06-30.md  v3-phase2-baseline-2026-06-30.md  v3-phase3-baseline-2026-06-30.md  v3-phase4-baseline-2026-06-30.md  v3-phase5-6-7-baseline-2026-06-30.md  v3-phase5.1-baseline-2026-06-30.md  v3-phase6-baseline-2026-06-30.md  v3-phase6-latency-2026-06-30.md
docs/perf/: real-device-call-flow.md
examples/: ai_phone_demo.rs  ai_summary_demo.rs  e2e_full_intent.rs  e2e_llm_agent.py  gamepad_demo.rs  latency_bench.rs  live_e2e.rs  live_kbd.rs  multitouch_10.rs  type_keys.rs
src/: agent.rs  async_device.rs  client.rs  coalesce.rs  device.rs  error.rs  gamepad_ring.rs  lib.rs  multitouch.rs  session.rs  types.rs
src/agent/: action.rs  estimator.rs  geometry.rs  mod.rs  session.rs  session_tcp.rs  tests.rs  types.rs
src/ai/: mod.rs
src/control/: message.rs  mod.rs
src/hid/: descriptor.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs
src/transport/: mod.rs
tests/: ai_intents.rs  ai_summary.rs  ai_summary_e2e.rs  coalesce_flush.rs  gamepad_240hz_bench.rs  inject_touch_multitouch.rs  integration.rs  multitouch_handle.rs  parallel_client.rs  session_lifecycle.rs
