[package]
name = "android-hid-connect"
version = "0.1.0"
edition = "2021"
description = "Rust port of scrcpy's UHID control protocol — drive Android via HID over scrcpy-server control socket"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/android-hid-connect"
readme = "README.md"
keywords = ["android", "scrcpy", "uhid", "hid", "automation"]
categories = ["api-bindings", "hardware-support"]

[lib]
name = "android_hid_connect"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt", "sync", "time"], optional = true }

[dev-dependencies]
bytes = "1"
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "uhid_throughput"
harness = false

[features]
default = []
std = []
tokio = ["dep:tokio"]
